--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -13,7 +13,9 @@ body {
 }
 
 h1,h2,h3,h4 {
-	text-transform: capitalize;
+	&:first-letter {
+		text-transform: uppercase;
+	}
 }
 
 h1 {
@@ -32,12 +34,53 @@ h3 {
 	padding: 1.5em 0;
 	margin: 0;
 	line-height: 1.5em;
-	margin-bottom: 1em;
 	border-bottom: 1px solid #ccc;
+}
+
+h4 {
+	margin: 1em 0;
+	border-bottom: 1px solid #ccc;
+	line-height: 1.5em;
+}
+
+pre {
+	tab-size: 4;
+}
+
+em {
+	font-weight: bold;
+}
+
+p, ul {
+	margin: 0 0 1em;
 }
 
 .content {
 	max-width: 800px;
 	margin: auto;
 	padding: 20px;
+}
+
+.content-restraint {
+	max-width: 800px;
+	margin: auto;
+	padding: 0 20px;
+}
+
+.other {
+	a {
+		display: block;
+
+		&:first-letter {
+			text-transform: uppercase;
+		}
+	}
+}
+
+.markdown {
+	img {
+		margin: auto;
+		display: block;
+		max-width: 100%;
+	}
 }
