edits and added comment block

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -18,6 +18,8 @@ h1,h2,h3,h4 {
 	}
 }
 
+.fb-comments, .fb-comments span[style], .fb-comments iframe[style] {width: 100% !important;}
+
 h1 {
 	font-size: 38px;
 	line-height: 48px;
